# prog_in_ai_2026

./: .gitignore  README.md  index.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: static.yml
docs/: .pages  index.html  index.md
docs/2_numpy_pandas/: .pages  02-carprice.ipynb  1_numpy.ipynb  2_linal_numpy.ipynb  3_pandas.ipynb  4_EDA_and_lin.ipynb  index.md  numpy_basics.ipynb  numpy_linalg.ipynb  pandas_basics.ipynb
docs/2_numpy_pandas/extra/: pandas_eda_groupby.ipynb
docs/3_scipy_grad/: Basics SciPy.ipynb  [ЦК,_ДПО,_Машинное_обучение]_Пример_1_Синтетические_данные_Разведочный_анализ_данных_Построение_модели_линейной_регрессии_Оценка_модели.ipynb  basics_SciPy.ipynb  f.mat
docs/4_lin_reg/: lin_reg_base.ipynb
docs/6_log_reg/: logreg_metrics.pptx
scripts/: normalize_notebooks.py
